[package]
name = "oxidant"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
num_enum = "0.5.7"
sshcerts = {path = "../sshcerts", features = ["all"]}
async-trait = "0.1.58"
tokio = {version = "1.21.0", features = ["rt-multi-thread", "net", "macros", "sync"]}
base64 = "0.13.1"
